@@ -24,6 +24,7 @@ Todo:
 - New color cluster system.
 - Gradient inks uses the new color cluster system.
 - Preparations for saving/loading color clusters and the visual control of it.
+- Color clusters are saved into system state and read back on startup.
 
 2023.04.09
 - Added ColorBox to PaletteEditor. It shows the selected color in a bigger area.
